2008-01-05  Sven Joachim  <svenjoac@gmx.de>

	* vc-bzr.el: Fix typo in header.

2008-01-05  Eli Zaretskii  <eliz@gnu.org>

	* Makefile.in (custom-deps, finder-data): Depend on autoloads
	instead of loaddefs.el.

2008-01-05  Glenn Morris  <rgm@gnu.org>

	* progmodes/verilog-mode.el: Replace all instances of
	string-to-int with string-to-number, insert-string with insert,
	and read-input with read-string.
	(top-level): No need to require imenu, reporter, dinotrace, vc,
	font-lock when compiling.  Always require compile.  Relegate remaining
	compatibility cruft to XEmacs.  Don't require font-lock.
	(verilog-version): Remove superfluous concat.
	(dinotrace-unannotate-all, zmacs-activate-region, customize-apropos):
	No need to define.
	(verilog-regexp-opt): On Emacs, just make it an alias for regexp-opt.
	(verilog-font-lock-keywords, verilog-font-lock-keywords-1)
	(verilog-font-lock-keywords-2, verilog-font-lock-keywords-3)
	(verilog-startup-message-displayed): These are variables, not constants.
	(verilog-batch-execute-func, verilog-auto-inst)
	(verilog-auto-inst-param): Use mapc rather than mapcar.
	(sigs-in, sigs-inout, sigs-out): Define for compiler rather than
	actually defining.
	(verilog-modi-get-decls, verilog-modi-get-sub-decls)
	(verilog-modi-get-outputs, verilog-modi-get-inouts)
	(verilog-modi-get-inputs, verilog-modi-get-wires)
	(verilog-modi-get-regs, verilog-modi-get-assigns)
	(verilog-modi-get-consts, verilog-modi-get-gparams)
	(verilog-modi-get-sub-outputs, verilog-modi-get-sub-inouts)
	(verilog-modi-get-sub-inputs): Move inline functions earlier in
	the file.
	(sigs-in, sigs-out): Don't declare multiple times.
	(got-sig, got-rvalue, uses-delayed): Define for compiler with just
	`defvar'.
	(verilog-auto): Call dinotrace-unannotate-all only if bound.
	(verilog-module-inside-filename-p): No need to wrap fboundp test
	in condition-case.
	(reporter-submit-bug-report): Autoload it.
	(verilog-mark-defun): Call zmacs-activate-region only if bound.