@@ -1,3 +1,8 @@
+2008-01-06  Michael Albinus  <michael.albinus@gmx.de>
+
+	* ffap.el (ffap-read-file-or-url): Let-bind
+	`file-name-handler-alist' due to `rfn-eshadow-update-overlay'.
+
 2008-01-05  Sven Joachim  <svenjoac@gmx.de>
 
 	* vc-bzr.el: Fix typo in header.
